--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -10,8 +10,8 @@
 }
 
 img {
-  width: 100px;
-  border-radius: 50%;
+  border-radius: 12px;
+  box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.104);
 }
 
 .texto {
@@ -25,6 +25,6 @@ img {
   font-weight: bold;
   font-size: 13px;
   color: black;
-  background-color: rgb(20, 244, 17);
+  background-color: yellow;
   text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.156);
 }
