--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -3,16 +3,20 @@
     <ion-title>
       Joao's Pizzarias
     </ion-title>
+
+    <ion-buttons slot="end">
+      <ion-button>
+        <ion-icon slot="icon-only" name="person-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+
   </ion-toolbar>
 </ion-header>
 
 
-<ion-content [fullscreen]="true" color="light">
+<ion-content [fullscreen]="true" color="warning">
   <ion-list-header color="light">
     <ion-label class="ajustes">Cardápio</ion-label>
-    <ion-button>
-      <ion-icon class="pessoa" name="person-circle-sharp"></ion-icon>
-    </ion-button>
   </ion-list-header>
   <!--Barra de pesquisa-->
   <ion-searchbar placeholder="Buscar" color="dark"></ion-searchbar>
@@ -23,41 +27,41 @@
   <!--Lista-->
   <ion-list>
     <!--Pizza1-->
-    <ion-item color="warning">
+    <ion-item color="danger">
       <ion-thumbnail slot="start">
-        <img src="https://www.anamariabrogui.com.br/assets/uploads/receitas/fotos/usuario-1932-5a1b7911dfda6e3c351c30de564da267.jpg">
+        <img src="https://caldobom.com.br/uploads/2017/07/pizza-mussarela.jpg">
       </ion-thumbnail>
       <ion-label class="texto">Mussarela</ion-label>
       <ion-badge class="preco" slot="end" color="success">R$ 22,00</ion-badge>
     </ion-item>
     <!--Pizza2-->
-    <ion-item color="warning">
+    <ion-item color="danger">
       <ion-thumbnail slot="start">
-        <img src="https://www.hummmpizzas.com.br/wp-content/uploads/2022/01/salgadas-suprema-brocolis.png">
+        <img src="https://img.itdg.com.br/tdg/images/recipes/000/155/954/102994/102994_original.jpg?w=1200">
       </ion-thumbnail>
       <ion-label class="texto">Brocólis</ion-label>
       <ion-badge class="preco" slot="end" color="success">R$ 26,00</ion-badge>
     </ion-item>
     <!--Pizza3-->
-    <ion-item color="warning">
+    <ion-item color="danger">
       <ion-thumbnail slot="start">
-        <img src="https://w7.pngwing.com/pngs/843/171/png-transparent-pizza-73-restaurant-catupiry-chicken-as-food-pizza-baked-goods-food-recipe.png">
+        <img src="https://www.comidaereceitas.com.br/img/sizeswp/1200x675/2019/08/Pizza_frango_requeijao-1.jpg">
       </ion-thumbnail>
       <ion-label class="texto">Frango</ion-label>
       <ion-badge class="preco" slot="end" color="success">R$ 20,00</ion-badge>
     </ion-item>
     <!--Pizza4-->
-    <ion-item color="warning">
+    <ion-item color="danger">
       <ion-thumbnail slot="start">
-        <img src="https://w7.pngwing.com/pngs/846/457/png-transparent-pizza-margherita-italian-cuisine-basil-mozzarella-pizza-food-baking-recipe.png">
+        <img src="https://static.clubedaanamariabraga.com.br/wp-content/uploads/2020/08/pizza-margherita-1024x576.jpg">
       </ion-thumbnail>
       <ion-label class="texto">Margarita</ion-label>
       <ion-badge class="preco" slot="end" color="success">R$ 18,00</ion-badge>
     </ion-item>
     <!--Pizza5-->
-    <ion-item color="warning">
+    <ion-item color="danger">
       <ion-thumbnail slot="start">
-        <img src="https://w7.pngwing.com/pngs/1019/37/png-transparent-pizza-bacon-italian-cuisine-meatball-ham-pepperoni-sausage-food-beef-recipe.png">
+        <img src="https://www.sabornamesa.com.br/media/k2/items/cache/513d7a0ab11e38f7bd117d760146fed3_L.jpg">
       </ion-thumbnail>
       <ion-label class="texto">Calabresa</ion-label>
       <ion-badge class="preco" slot="end" color="success">R$ 20,00</ion-badge>
