--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -3,65 +3,65 @@
     <ion-title>
       Joao's Pizzarias
     </ion-title>
+    <ion-buttons slot="end">
+      <ion-button>
+        <ion-icon slot="icon-only" name="person-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
-
-
-<ion-content [fullscreen]="true" color="light">
-  <ion-list-header color="light">
+<!--Content-->
+<ion-content [fullscreen]="true">
+  <ion-list-header >
     <ion-label class="ajustes">Cardápio</ion-label>
-    <ion-button>
-      <ion-icon class="pessoa" name="person-circle-sharp"></ion-icon>
-    </ion-button>
   </ion-list-header>
   <!--Barra de pesquisa-->
-  <ion-searchbar placeholder="Buscar" color="dark"></ion-searchbar>
+  <ion-searchbar placeholder="Buscar"></ion-searchbar>
   <!--List header-->
-  <ion-list-header color="light">
+  <ion-list-header>
     <ion-label class="ajustes">Pizzas</ion-label>
   </ion-list-header>
   <!--Lista-->
   <ion-list>
     <!--Pizza1-->
-    <ion-item color="warning">
+    <ion-item color="danger">
       <ion-thumbnail slot="start">
-        <img src="https://www.anamariabrogui.com.br/assets/uploads/receitas/fotos/usuario-1932-5a1b7911dfda6e3c351c30de564da267.jpg">
+        <img src="https://caldobom.com.br/uploads/2017/07/pizza-mussarela.jpg">
       </ion-thumbnail>
       <ion-label class="texto">Mussarela</ion-label>
       <ion-badge class="preco" slot="end" color="success">R$ 22,00</ion-badge>
     </ion-item>
     <!--Pizza2-->
-    <ion-item color="warning">
+    <ion-item color="danger">
       <ion-thumbnail slot="start">
-        <img src="https://www.hummmpizzas.com.br/wp-content/uploads/2022/01/salgadas-suprema-brocolis.png">
+        <img src="https://img.itdg.com.br/tdg/images/recipes/000/155/954/102994/102994_original.jpg?w=1200">
       </ion-thumbnail>
       <ion-label class="texto">Brocólis</ion-label>
       <ion-badge class="preco" slot="end" color="success">R$ 26,00</ion-badge>
     </ion-item>
     <!--Pizza3-->
-    <ion-item color="warning">
+    <ion-item color="danger">
       <ion-thumbnail slot="start">
-        <img src="https://w7.pngwing.com/pngs/843/171/png-transparent-pizza-73-restaurant-catupiry-chicken-as-food-pizza-baked-goods-food-recipe.png">
+        <img src="https://www.comidaereceitas.com.br/img/sizeswp/1200x675/2019/08/Pizza_frango_requeijao-1.jpg">
       </ion-thumbnail>
       <ion-label class="texto">Frango</ion-label>
       <ion-badge class="preco" slot="end" color="success">R$ 20,00</ion-badge>
     </ion-item>
     <!--Pizza4-->
-    <ion-item color="warning">
+    <ion-item color="danger">
       <ion-thumbnail slot="start">
-        <img src="https://w7.pngwing.com/pngs/846/457/png-transparent-pizza-margherita-italian-cuisine-basil-mozzarella-pizza-food-baking-recipe.png">
+        <img src="https://assets.unileversolutions.com/recipes-v2/54475.jpg">
       </ion-thumbnail>
       <ion-label class="texto">Margarita</ion-label>
       <ion-badge class="preco" slot="end" color="success">R$ 18,00</ion-badge>
     </ion-item>
     <!--Pizza5-->
-    <ion-item color="warning">
+    <ion-item color="danger">
       <ion-thumbnail slot="start">
-        <img src="https://w7.pngwing.com/pngs/1019/37/png-transparent-pizza-bacon-italian-cuisine-meatball-ham-pepperoni-sausage-food-beef-recipe.png">
+        <img src="https://cdn6.campograndenews.com.br/uploads/noticias/2022/03/04/3cb5530b66938475b217183a18974de301f5b0fd.jpg">
       </ion-thumbnail>
       <ion-label class="texto">Calabresa</ion-label>
       <ion-badge class="preco" slot="end" color="success">R$ 20,00</ion-badge>
     </ion-item>
   </ion-list>
-
 </ion-content>
