--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -10,14 +10,13 @@
 }
 
 img {
-  width: 100px;
-  border-radius: 50%;
+  border-radius: 5px;
 }
 
 .texto {
   font-size: 1em;
   font-weight: bold;
-  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.07);
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.25);
 }
 
 .preco {
@@ -25,6 +24,7 @@ img {
   font-weight: bold;
   font-size: 13px;
   color: black;
-  background-color: rgb(20, 244, 17);
-  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.156);
+  background-color: #FFE900;
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.147);
 }
+
