--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -3,25 +3,22 @@
     <ion-title>
       Joao's Pizzarias
     </ion-title>
-
     <ion-buttons slot="end">
       <ion-button>
         <ion-icon slot="icon-only" name="person-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
-
   </ion-toolbar>
 </ion-header>
-
-
-<ion-content [fullscreen]="true" color="warning">
-  <ion-list-header color="light">
+<!--Content-->
+<ion-content [fullscreen]="true">
+  <ion-list-header >
     <ion-label class="ajustes">Cardápio</ion-label>
   </ion-list-header>
   <!--Barra de pesquisa-->
-  <ion-searchbar placeholder="Buscar" color="dark"></ion-searchbar>
+  <ion-searchbar placeholder="Buscar"></ion-searchbar>
   <!--List header-->
-  <ion-list-header color="light">
+  <ion-list-header>
     <ion-label class="ajustes">Pizzas</ion-label>
   </ion-list-header>
   <!--Lista-->
@@ -53,7 +50,7 @@
     <!--Pizza4-->
     <ion-item color="danger">
       <ion-thumbnail slot="start">
-        <img src="https://static.clubedaanamariabraga.com.br/wp-content/uploads/2020/08/pizza-margherita-1024x576.jpg">
+        <img src="https://assets.unileversolutions.com/recipes-v2/54475.jpg">
       </ion-thumbnail>
       <ion-label class="texto">Margarita</ion-label>
       <ion-badge class="preco" slot="end" color="success">R$ 18,00</ion-badge>
@@ -61,7 +58,7 @@
     <!--Pizza5-->
     <ion-item color="danger">
       <ion-thumbnail slot="start">
-        <img src="https://www.sabornamesa.com.br/media/k2/items/cache/513d7a0ab11e38f7bd117d760146fed3_L.jpg">
+        <img src="https://cdn6.campograndenews.com.br/uploads/noticias/2022/03/04/3cb5530b66938475b217183a18974de301f5b0fd.jpg">
       </ion-thumbnail>
       <ion-label class="texto">Calabresa</ion-label>
       <ion-badge class="preco" slot="end" color="success">R$ 20,00</ion-badge>
