--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -6,7 +6,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" color="dark">
 
   <ion-grid>
     <ion-row>
@@ -14,90 +14,104 @@
       <ion-col size="6">
 
         <ion-card color="warning">
-        <img src="https://www.drogariaminasbrasil.com.br/media/product/dc1/refrigerante-fanta-laranja-lata-350ml-6eb.jpg" alt="fanta laranja">
+          <img
+            src="https://www.drogariaminasbrasil.com.br/media/product/dc1/refrigerante-fanta-laranja-lata-350ml-6eb.jpg"
+            alt="fanta laranja">
+
           <ion-item>
-            <ion-label class="textoCenter">Laranja</ion-label>
+            <ion-label class="textoBebida">Laranja</ion-label>
           </ion-item>
           <ion-item>
-            <ion-label>R$ 5,20</ion-label>
-            <ion-button slot="end">
-              <ion-icon slot="icon-only" name="cart"></ion-icon>
-            </ion-button>
+            <ion-label>R$ 4,00</ion-label>
+            <ion-badge slot="end">
+              <ion-icon class="carrinho" name="cart"></ion-icon>
+            </ion-badge>
           </ion-item>
         </ion-card>
       </ion-col>
       <!--Bebida 2-->
       <ion-col size="6">
-        <ion-card color="primary">
-          <img src="https://images-americanas.b2w.io/produtos/2639474514/imagens/fanta-uva-lata-350ml-pack-12-unidades/2639474522_1_large.jpg" alt="fanta uva">
+        <ion-card color="tertiary">
+          <img
+            src="https://images-americanas.b2w.io/produtos/2639474514/imagens/fanta-uva-lata-350ml-pack-12-unidades/2639474522_1_large.jpg"
+            alt="fanta uva">
+
           <ion-item>
-            <ion-label class="textoCenter">Uva</ion-label>
+            <ion-label class="textoBebida">Uva</ion-label>
           </ion-item>
           <ion-item>
-            <ion-label>R$ 5,20</ion-label>
-            <ion-button slot="end">
-              <ion-icon slot="icon-only" name="cart"></ion-icon>
-            </ion-button>
+            <ion-label>R$ 4,00</ion-label>
+            <ion-badge slot="end">
+              <ion-icon class="carrinho" name="cart"></ion-icon>
+            </ion-badge>
           </ion-item>
         </ion-card>
       </ion-col>
       <!--Bebida 3-->
       <ion-col size="6">
         <ion-card color="medium">
-          <img src="https://riomarrecife.com.br/recife/2020/02/Pepsi-350ml.jpg" alt="pepsi">
+          <img
+            src="https://riomarrecife.com.br/recife/2020/02/Pepsi-350ml.jpg" alt="pepsi">
           <ion-item>
-            <ion-label class="textoCenter">Pepsi</ion-label>
+            <ion-label class="textoBebida">Pepsi</ion-label>
           </ion-item>
           <ion-item>
-            <ion-label>R$ 5,80</ion-label>
-            <ion-button slot="end">
-              <ion-icon slot="icon-only" name="cart"></ion-icon>
-            </ion-button>
+            <ion-label>R$ 4,50</ion-label>
+            <ion-badge slot="end">
+              <ion-icon class="carrinho" name="cart"></ion-icon>
+            </ion-badge>
           </ion-item>
         </ion-card>
       </ion-col>
       <!--Bebida 4-->
       <ion-col size="6">
         <ion-card color="danger">
-          <img src="https://d3o3bdzeq5san1.cloudfront.net/122/121053.jpg" alt="fys guaraná">
+          <img
+            src="https://cf.shopee.com.br/file/29f36f17a55e1ab3f91a83ec2029aec8"
+            alt="fanta morango">
+
           <ion-item>
-            <ion-label class="textoCenter">Guaraná</ion-label>
+            <ion-label class="textoBebida">Morango</ion-label>
           </ion-item>
           <ion-item>
-            <ion-label>R$ 4,90</ion-label>
-            <ion-button slot="end">
-              <ion-icon slot="icon-only" name="cart"></ion-icon>
-            </ion-button>
+            <ion-label>R$ 4,00</ion-label>
+            <ion-badge slot="end">
+              <ion-icon class="carrinho" name="cart"></ion-icon>
+            </ion-badge>
           </ion-item>
         </ion-card>
       </ion-col>
       <!--Bebida 5-->
       <ion-col size="6">
         <ion-card color="warning">
-          <img src="http://cdn.shopify.com/s/files/1/0557/2093/5599/products/AGUA-TONICA-SCHWEPPES-LATA-354ML_adaa4c_21920.jpg?v=1625498575" alt="agua tonica">
+          <img
+            src="https://comeonburger.com.br/wp-content/uploads/2019/12/laranja.jpg"
+            alt="suco laranja">
+
           <ion-item>
-            <ion-label class="textoCenter">Tonica</ion-label>
+            <ion-label class="textoBebida">Suco Laranja</ion-label>
           </ion-item>
           <ion-item>
-            <ion-label>R$ 4,00</ion-label>
-            <ion-button slot="end">
-              <ion-icon slot="icon-only" name="cart"></ion-icon>
-            </ion-button>
+            <ion-label>R$ 7,00</ion-label>
+            <ion-badge slot="end">
+              <ion-icon class="carrinho" name="cart"></ion-icon>
+            </ion-badge>
           </ion-item>
         </ion-card>
       </ion-col>
       <!--Bebida 6-->
       <ion-col size="6">
-        <ion-card color="warning">
-          <img src="https://comeonburger.com.br/wp-content/uploads/2019/12/laranja.jpg" alt="suco laranja">
+        <ion-card color="medium">
+          <img
+            src="https://us-southeast-1.linodeobjects.com/storage/storage-sandbox/media/uploads/produto/agua_mineral_indaia_500ml_e817f8ca-490a-47d4-9ee4-07ea696d7da0.jpg">
           <ion-item>
-            <ion-label class="textoCenter">Suco Laranja</ion-label>
+            <ion-label class="textoBebida">Água</ion-label>
           </ion-item>
           <ion-item>
-            <ion-label>R$ 7,00</ion-label>
-            <ion-button slot="end">
-              <ion-icon slot="icon-only" name="cart"></ion-icon>
-            </ion-button>
+            <ion-label>R$ 2,00</ion-label>
+            <ion-badge slot="end">
+              <ion-icon class="carrinho" name="cart"></ion-icon>
+            </ion-badge>
           </ion-item>
         </ion-card>
       </ion-col>
