--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -10,14 +10,13 @@
 }
 
 img {
-  border-radius: 12px;
-  box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.104);
+  border-radius: 5px;
 }
 
 .texto {
   font-size: 1em;
   font-weight: bold;
-  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.07);
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.25);
 }
 
 .preco {
@@ -25,6 +24,6 @@ img {
   font-weight: bold;
   font-size: 13px;
   color: black;
-  background-color: yellow;
-  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.156);
+  background-color: #FFE900;
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.147);
 }
