--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -10,9 +10,30 @@
 }
 
 img {
+  display: block;
+  margin: auto;
+  width: 100px;
   border-radius: 50%;
 }
 
-.textoCenter {
+.textoBebida {
+  color: rgb(45, 45, 45);
   text-align: center;
+  font-size: 1em;
+  font-weight: bold;
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.039);
+}
+
+.preco {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  font-size: 13px;
+  color: black;
+  background-color: rgb(20, 244, 17);
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.156);
+}
+
+.carrinho {
+  width: 30px;
+  height: 20px;
 }
